[gd_scene load_steps=10 format=3 uid="uid://ba6wr367e1ca3"]

[ext_resource type="Script" uid="uid://d16cnqr0qecm2" path="res://Scripts/main_scene.gd" id="1_8gbba"]
[ext_resource type="PackedScene" uid="uid://bar4643f8e3b6" path="res://Scenes/settings/settings.tscn" id="1_bo1nx"]
[ext_resource type="PackedScene" uid="uid://cy26un41gtn68" path="res://Scenes/player.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://uhglxtrdybra" path="res://Scripts/main.gd" id="1_jjvhh"]
[ext_resource type="Texture2D" uid="uid://4hfukros583l" path="res://Textures/button.png" id="4_21xkr"]
[ext_resource type="Script" uid="uid://c0a25ifcxmfnv" path="res://addons/virtual_joystick/virtual_joystick_instantiator.gd" id="4_kry3j"]
[ext_resource type="AudioStream" uid="uid://bd437n38sxpm4" path="res://sounds/strawberry_cheesecake.mp3" id="7_6bp64"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21xkr"]

[sub_resource type="GDScript" id="GDScript_jjvhh"]
script/source = "extends Button
"

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_jjvhh")

[node name="MainScene" type="CanvasLayer" parent="."]
script = ExtResource("1_8gbba")

[node name="BG" type="ColorRect" parent="MainScene"]
modulate = Color(0.351563, 0.351563, 0.351563, 1)
show_behind_parent = true
offset_left = -1059.0
offset_top = -562.0
offset_right = 304.0
offset_bottom = 262.0
scale = Vector2(2.40235, 2.305)
color = Color(0.868985, 0.868985, 0.868985, 1)

[node name="Player" parent="MainScene" instance=ExtResource("1_jjgbg")]
position = Vector2(231, 158)

[node name="Buttons" type="Control" parent="MainScene"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.2, 1)

[node name="Money_Click" type="Button" parent="MainScene/Buttons"]
layout_mode = 1
offset_left = 404.167
offset_top = 565.0
offset_right = 412.167
offset_bottom = 573.0
scale = Vector2(8.01015, 9.07164)
theme_override_styles/focus = SubResource("StyleBoxEmpty_21xkr")

[node name="Click here" type="Label" parent="MainScene/Buttons/Money_Click"]
layout_mode = 0
offset_left = -28.0894
offset_top = 0.551169
offset_right = 81.9106
offset_bottom = 23.5512
scale = Vector2(0.18496, 0.220296)
text = "Click Here >>>"

[node name="ColorRect" type="Panel" parent="MainScene/Buttons"]
layout_mode = 0
offset_left = 656.667
offset_top = 5.0
offset_right = 955.667
offset_bottom = 108.0

[node name="Settings Button" type="Sprite2D" parent="MainScene/Buttons/ColorRect"]
position = Vector2(225, 52)
scale = Vector2(0.304692, 0.411139)
texture = ExtResource("4_21xkr")

[node name="Shop Button" type="Sprite2D" parent="MainScene/Buttons/ColorRect"]
position = Vector2(82.5001, 52)
scale = Vector2(0.322054, 0.411458)
texture = ExtResource("4_21xkr")

[node name="Settings_Btn" type="Button" parent="MainScene/Buttons/ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.167
offset_top = 21.0
offset_right = -64.1666
offset_bottom = 46.0
grow_horizontal = 0
scale = Vector2(1.7, 2.385)
text = "Settings"
flat = true

[node name="Shop_Btn" type="Button" parent="MainScene/Buttons/ColorRect"]
layout_mode = 0
offset_left = 23.0
offset_top = 15.0
offset_right = 93.0
offset_bottom = 52.0
scale = Vector2(1.7, 1.953)
text = "Shop"
flat = true
script = SubResource("GDScript_jjvhh")

[node name="Money" type="Label" parent="MainScene"]
offset_right = 40.0
offset_bottom = 23.0
text = "Money:"

[node name="Money_Count" type="Label" parent="MainScene/Money"]
layout_mode = 0
offset_left = 59.0
offset_top = 2.0
offset_right = 99.0
offset_bottom = 25.0
scale = Vector2(1.625, 0.97286)

[node name="Virtual Joystick" type="Control" parent="MainScene"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = 637.0
offset_right = 2.0
offset_bottom = 677.0
script = ExtResource("4_kry3j")
metadata/_custom_type_script = "uid://c0a25ifcxmfnv"

[node name="Settings" parent="." instance=ExtResource("1_bo1nx")]
visible = false

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_6bp64")
volume_db = 24.0
max_distance = 4096.0
parameters/looping = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="pressed" from="MainScene/Buttons/Money_Click" to="." method="_on_money_click_pressed"]
[connection signal="pressed" from="MainScene/Buttons/ColorRect/Settings_Btn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MainScene/Buttons/ColorRect/Settings_Btn" to="MainScene" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MainScene/Buttons/ColorRect/Settings_Btn" to="Settings" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MainScene/Buttons/ColorRect/Shop_Btn" to="." method="_on_shop_btn_pressed"]
